exports[`handleClick property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={[Function]}>
  Click me!
</button>
`;

exports[`label property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={undefined}>
  Hello
</button>
`;

exports[`type property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={undefined}>
  Hello
</button>
`;
